alerts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alerts
  namespace: central-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alerts
  template:
    metadata:
      labels:
        app: alerts
    spec:
      containers:
        - name: alerts
          image: backend-alerts:latest
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /alerts/health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: alerts-service
  namespace: central-platform
spec:
  selector:
    app: alerts
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
