api-rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-rest
  namespace: central-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-rest
  template:
    metadata:
      labels:
        app: api-rest
    spec:
      containers:
        - name: api-rest
          image: backend-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: api-rest-service
  namespace: central-platform
spec:
  selector:
    app: api-rest
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
