frontend-facit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-facit
  namespace: central-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-facit
  template:
    metadata:
      labels:
        app: frontend-facit
    spec:
      containers:
        - name: frontend-facit
          image: frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-facit-service
  namespace: central-platform
spec:
  selector:
    app: frontend-facit
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
