gateway-goodwe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-goodwe
  namespace: central-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-goodwe
  template:
    metadata:
      labels:
        app: gateway-goodwe
    spec:
      containers:
        - name: gateway-goodwe
          image: gateway-goodwe:latest
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-goodwe-service
  namespace: central-platform
spec:
  selector:
    app: gateway-goodwe
  ports:
    - port: 8001
      targetPort: 8001
  type: ClusterIP
