gateway-t301.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-t301
  namespace: central-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-t301
  template:
    metadata:
      labels:
        app: gateway-t301
    spec:
      containers:
        - name: gateway-t301
          image: gateway-t301:latest
          ports:
            - containerPort: 9988
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-t301-service
  namespace: central-platform
spec:
  selector:
    app: gateway-t301
  ports:
    - port: 9988
      targetPort: 9988
  type: NodePort
