websocket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket
  namespace: central-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket
  template:
    metadata:
      labels:
        app: websocket
    spec:
      containers:
        - name: websocket
          image: backend-websocket:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
  namespace: central-platform
spec:
  selector:
    app: websocket
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
