ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: central-platform-ingress
  namespace: central-platform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /admin(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-facit-service
                port:
                  number: 80
          - path: /app(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-fyr-service
                port:
                  number: 80
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: api-rest-service
                port:
                  number: 8000
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: websocket-service
                port:
                  number: 3000
