passbolt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passbolt
  namespace: central-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: passbolt
  template:
    metadata:
      labels:
        app: passbolt
    spec:
      containers:
        - name: passbolt
          image: passbolt/passbolt:latest-ce
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/passbolt
              name: passbolt-volume
      volumes:
        - name: passbolt-volume
          persistentVolumeClaim:
            claimName: passbolt-storage
---
apiVersion: v1
kind: Service
metadata:
  name: passbolt-service
  namespace: central-platform
spec:
  selector:
    app: passbolt
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passbolt-ingress
  namespace: central-platform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: passbolt.emiliomoro.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passbolt-service
                port:
                  number: 80
